added api integrations, local storage cache, and pagination for the homepage

--- a/homepage.html
+++ b/homepage.html
@@ -30,6 +30,7 @@
           placeholder="Search for a plant..."
         />
         <div id="plants-container"></div>
+        <div id="pagination-container"></div>
       </section>
     </main>
     <script src="homepage.js"></script>
