fixing some best practices and onLoad method

--- a/homepage.html
+++ b/homepage.html
@@ -6,7 +6,7 @@
     <title>Virtual Garden Planner</title>
     <link rel="stylesheet" href="homepage.css" />
   </head>
-  <body>
+  <body onload="initialize()">
     <header>
       <h1>Virtual Garden Planner</h1>
       <nav>
