added plant details

--- a/homepage.html
+++ b/homepage.html
@@ -23,12 +23,14 @@
         <button id="explore-btn">Explore Plants</button>
       </section>
       <section class="plant-library main-layout content">
-        <h2>Plant Library</h2>
-        <input
-          type="text"
-          class="search-bar"
-          placeholder="Search for a plant..."
-        />
+        <div class="search-container">
+          <h2>Plant Library</h2>
+          <input
+            type="text"
+            class="search-bar"
+            placeholder="Search for a plant..."
+          />
+        </div>
         <div class="plants-container"></div>
         <div class="pagination-container"></div>
       </section>
