--- a/homepage.html
+++ b/homepage.html
@@ -10,8 +10,8 @@
     <header>
       <h1>Virtual Garden Planner</h1>
       <nav>
-        <a href="index.html">Home</a>
-        <a href="tracker.html">Tracker</a>
+        <a href="homepage.html">Home</a>
+        <a href="plant-tracker.html">Tracker</a>
       </nav>
     </header>
     <main>
@@ -25,6 +25,7 @@
       <section class="plant-library main-layout content">
         <div class="search-container">
           <h2>Plant Library</h2>
+          <input type="file" name="plant-ai" id="plant-ai" accept="image/*" />
           <input
             type="text"
             class="search-bar"
