--- a/homepage.html
+++ b/homepage.html
@@ -20,9 +20,9 @@
         <p>
           Explore plants, track your favorites, and keep your garden thriving!
         </p>
-        <button id="explore-btn">Explore Plants</button>
+        <a id="explore-btn" href="#plant-library">Explore Plants</a>
       </section>
-      <section class="plant-library main-layout content">
+      <section class="plant-library main-layout content" id="plant-library">
         <div class="search-container">
           <h2>Plant Library</h2>
           <input type="file" name="plant-ai" id="plant-ai" accept="image/*" />
