--- a/plant-tracker.html
+++ b/plant-tracker.html
@@ -1,30 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Garden Tracker</title>
-    <link rel="stylesheet" href="plant-tracker.css">
-</head>
+    <link rel="stylesheet" href="plant-tracker.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Garden Tracker</h1>
-        <p>Here you can keep track of your plants growth</p>
+      <h1>Virtual Garden Planner</h1>
+      <nav>
+        <a href="homepage.html">Home</a>
+        <a href="plant-tracker.html">Tracker</a>
+      </nav>
     </header>
 
-    <div id="plant-container" class="plant-card-container">
-    </div>
+    <div id="plant-container" class="plant-card-container"></div>
     <div class="pagination-container"></div>
-    <footer>
-        <a href="./homepage.html">Home Page</a>
-    </footer>
-
-
-
-
     <script src="plant-tracker.js"></script>
-</body>
-
+  </body>
 </html>
