footer added + back button

--- a/homepage.html
+++ b/homepage.html
@@ -50,6 +50,17 @@
         <div class="pagination-container"></div>
       </section>
     </main>
+    <footer class="app-footer">
+      <div class="footer-content">
+        <p>&copy; 2024 Virtual Garden Planner. All rights reserved.</p>
+        <div class="footer-links">
+          <a href="about.html">About Us</a>
+          <a href="contact.html">Contact</a>
+          <a href="privacy.html">Privacy Policy</a>
+        </div>
+      </div>
+    </footer>
+
     <script src="homepage.js"></script>
   </body>
 </html>
