--- a/plant-details-page.html
+++ b/plant-details-page.html
@@ -20,6 +20,8 @@
         <a href="" id="add-to-tracker-link" class="add-to-tracker"
           >Add to Tracker</a
         >
+        <button id="back-button" class="back-button">Back</button>
+
         <img
           id="plant-image"
           class="plant-image"
