added footer on all pages

--- a/plant-tracker.html
+++ b/plant-tracker.html
@@ -18,6 +18,16 @@
 
     <div id="plant-container" class="plant-card-container"></div>
     <div class="pagination-container"></div>
+    <footer class="app-footer">
+      <div class="footer-content">
+        <p>&copy; 2024 Virtual Garden Planner. All rights reserved.</p>
+        <div class="footer-links">
+          <a href="about.html">About Us</a>
+          <a href="contact.html">Contact</a>
+          <a href="privacy.html">Privacy Policy</a>
+        </div>
+      </div>
+    </footer>
     <script src="plant-tracker.js"></script>
   </body>
 </html>
